--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,23 @@
 body{
     background-color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.02em;
 }
 
 .logo {
     font-family: 'Raleway';
     font-weight: 800;
-    font-weight: 600;
-    width: 115px;
-    height: 24px;
     color: #2E2F42;
     text-decoration: none;
-    font-weight: 800;
     font-size: 18px;
-    line-height: 1.5;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
 }
 
 .logo span {
+    font-family: 'Raleway';
     color: #4D5AE5;
+    font-weight: 800;
 }
 
 .pimary-navigation-list{
@@ -29,6 +29,10 @@ body{
 .pimary-navigation-item{
     color: #2E2F42;
     text-decoration: none;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .pimary-navigation-item:hover,
@@ -42,11 +46,14 @@ body{
 
 .contact-item{
     color: #2E2F42;
-    text-decoration: none
+    text-decoration: none;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .contact-item:hover,
-.contact-item:focus {
+.contact-itefm:focus {
     color: #434455;
 }
 
@@ -56,30 +63,26 @@ body{
 
 .slogan-section{
     background-color: #2E2F42;
-    height: 603px;
 }
 
 .studio_slogan{
     font-weight: 600;
     font-size: 56px;
-    letter-spacing: 2%; 
-    line-height: 1;
+    line-height: 1.07;
     color: #fff;
-    width: 492px;
-    height: 120px;
+
 }
 
 .start-button{
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 0.02em;
     font-weight: 600;
-        font-size: 16px;
-        line-height: 1.5px;
+    font-size: 16px;
+    line-height: 1.18;
+    letter-spacing: 0.04em;
     cursor: pointer;
     color: #fff;
     background: #4D5AE5;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    width: 170px;
-    height: 51px;
 }
 
 .start-button:hover,
@@ -104,10 +107,26 @@ body{
     
 }
 
-.what-are-we-doing-item h3{
+.what-are-we-doing-heading{
     font-weight: 600;
     font-size: 20px;
+    line-height: 1.2;
+}
+
+.what-are-we-doing-content {
     line-height: 1.5;
+}
+
+.what-are-we-doing-img-heading{
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
+}
+
+.our-team-heading{
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 1.11;
 }
 
 .work-list{
@@ -126,17 +145,17 @@ body{
     list-style: none;
 }
 
-.team-item{
-    display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 0px 0px 32px;
-    background: #FFFFFF;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    border-radius: 0px 0px 4px 4px;
-    width: 264px;
-    height: 380px;
+
+.person-heading{
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 1.2;
+}
+
+.person-description{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 .filter-list {
@@ -144,14 +163,13 @@ body{
 }
 
 .filter-item {
-    justify-content: center;
-    align-items: center;
-    padding: 8px 16px;
-    width: 116px;
-    height: 48px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
     background-color: #F4F4FD;
     color:#4D5AE5;
-    letter-spacing: 0.04em;
     cursor: pointer;
 }
 
@@ -172,21 +190,22 @@ body{
 }
 
 .catalog-item {
-    width: 360px;
-    border: 0.5px solid #F4F4FD;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+
 }
 
-.catalog-item img{
+.catalog-image{
 width: 360px;
 height: 300px;
 
 }
 
-.catalog-item h3{
+.catalog-heading{
     font-weight: 600;
-        font-size: 20px;
-        line-height: 1.5;
+    font-size: 20px;
+    line-height: 1.2;
 }
 
 .footer{
@@ -201,6 +220,8 @@ height: 300px;
 
 }
 
-.footer p{
-    width: 264px;
+.footer-desc{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
 }
